@@ -160,6 +160,7 @@ ModCallbacks.MC_POST_FAMILIAR_FIRE_TECH_LASER = 1262
 ModCallbacks.MC_IS_PERSISTENT_ROOM_ENTITY = 1263
 ModCallbacks.MC_PRE_PLAYERHUD_TRINKET_RENDER = 1264
 ModCallbacks.MC_PRE_PICKUP_VOIDED = 1265
+ModCallbacks.MC_PRE_PICKUP_VOIDED_ABYSS = 1266
 
 ModCallbacks.MC_PRE_RENDER_CUSTOM_CHARACTER_MENU = 1333
 
